// Copyright 2021-2024 Matrix Origin
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package partition; 
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/partition";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = false;
option (gogoproto.protosizer_all) = true;
option (gogoproto.goproto_enum_prefix_all) = true;
 
// PartitionMethod partition method
enum PartitionMethod {
    Key        = 0;
    LinearKey  = 1;
    Hash       = 2;
    LinearHash = 3;
    Range      = 4;
    List       = 5;
}

message PartitionMetadata {
    uint64             TableID      = 1;
    string             TableName    = 2;
    string             DatabaseName = 3;
    PartitionMethod    Method       = 4;
    string             Description  = 5;   
    repeated string    Columns      = 6;
    repeated Partition Partitions   = 7 [(gogoproto.nullable) = false];
}

message Partition {
    uint64 PartitionID        = 1;
    string PartitionTableName = 2;
    uint64 PrimaryTableID     = 3;
    string Name               = 4;
    uint32 Position           = 5;
    string Expression         = 6;
}